Refactor Specification and documentation update
